[gd_scene load_steps=6 format=3 uid="uid://dxico2ee3p7of"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_8stls"]
[ext_resource type="Theme" uid="uid://cf7id7ya15rcb" path="res://themes/menus.tres" id="2_jjsky"]

[sub_resource type="InputEventAction" id="InputEventAction_cc6wy"]
action = &"cancel"

[sub_resource type="Shortcut" id="Shortcut_v1tfa"]
events = [SubResource("InputEventAction_cc6wy")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lnotq"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8stls")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Container" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -134.0
offset_right = 92.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="Background/Container/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../RestartButton")
theme = ExtResource("2_jjsky")
shortcut = SubResource("Shortcut_v1tfa")
text = "Resume"

[node name="HSeparator" type="HSeparator" parent="Background/Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_lnotq")

[node name="RestartButton" type="Button" parent="Background/Container/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
theme = ExtResource("2_jjsky")
text = "Restart"

[node name="HSeparator2" type="HSeparator" parent="Background/Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_lnotq")

[node name="MainMenuButton" type="Button" parent="Background/Container/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../RestartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("2_jjsky")
text = "Main Menu"

[node name="HSeparator3" type="HSeparator" parent="Background/Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_lnotq")

[node name="QuitButton" type="Button" parent="Background/Container/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
theme = ExtResource("2_jjsky")
text = "Quit"

[connection signal="pressed" from="Background/Container/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Background/Container/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Background/Container/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Background/Container/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
